<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="row_item_isActive">Active</string>

    <string name="form_title_name">Name</string>
    <string name="form_title_lat">Latitude</string>
    <string name="form_title_lng">Longitude</string>
    <string name="form_title_range">Range</string>
    <string name="form_title_start_time">Start Time</string>
    <string name="form_title_end_time">End Time</string>
    <string name="form_title_object">What to do?</string>
    <string name="form_title_notes">Notes</string>
    <string name="form_title_is_active">Is Active?</string>
    <string name="form_title_is_done">Is Done?</string>
    <string name="form_set_location">Set Destination Location</string>
    <string name="form_radio_active">Active</string>
    <string name="form_radio_not_active">Not Active</string>
    <string name="form_radio_done">Complete</string>
    <string name="form_radio_not_done">Not Yet</string>
    <string name="form_button_save">Save</string>

    <string name="button_current_location">Get Current Location</string>
    <string name="button_new_todo">New To-Do</string>
</resources>